[package]
name = "rlmesh-python"
description = "Native extension bridge for the RLMesh Python package"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
publish = false

[package.metadata.cargo-machete]
ignored = ["pyo3-build-config"]

[lib]
name = "_rlmesh"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
doc = false
# The stub generator is the only consumer of pyo3-stub-gen, so it is the only
# target that needs the (dev-only) feature that links it in (review finding
# #115).
required-features = ["stub-gen"]

[features]
default = []
abi3-py311 = ["pyo3/abi3-py311"]
# Bundles the egui/eframe render viewer (rlmesh-cli) into the extension. Off by
# default so release wheels stay lean and headless; enable for builds that ship
# the local render viewer (review finding #113).
viewer = ["dep:rlmesh-cli"]
# Links the pyo3-stub-gen framework (and its rustpython-parser/unicode_names2
# Unicode tables) into the build so the stub_gen bin can emit `_rlmesh.pyi`. Off
# by default so release wheels neither ship that machinery nor carry its
# third-party license obligation; only the dev-time stub generation enables it
# (review finding #115).
stub-gen = ["dep:pyo3-stub-gen"]

[dependencies]
rlmesh = { workspace = true }
rlmesh-cli = { workspace = true, optional = true }
rlmesh-grpc = { workspace = true }
rlmesh-sandbox = { workspace = true }
rlmesh-spaces = { workspace = true }

async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

half = { workspace = true }
image = { workspace = true, features = ["png"] }
pyo3 = { workspace = true, features = [
  "auto-initialize",
  "extension-module",
  "generate-import-lib",
] }
pyo3-stub-gen = { workspace = true, optional = true }
# Non-optional on purpose: a build-time-only proc-macro whose
# rustpython-parser/unicode_names2 deps are host tools that never link into the
# cdylib. Supplies `gen_stub_*` (under `stub-gen`) and the `remove_gen_stub`
# no-op shim (without it) for the inert `#[gen_stub(...)]` helper attributes.
pyo3-stub-gen-derive = { workspace = true }
rand = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true, features = ["resolve-config"] }

[lints]
workspace = true
