[package]
name = "rlmesh-python"
description = "Native extension bridge for the RLMesh Python package"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
publish = false

[package.metadata.cargo-machete]
ignored = ["pyo3-build-config"]

[lib]
name = "_rlmesh"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
doc = false
# The stub generator is the only target that needs `stub-gen`.
required-features = ["stub-gen"]

[features]
default = ["cli"]
abi3-py311 = ["pyo3/abi3-py311"]
# Bundles the embedded `rlmesh` CLI (the `_rlmesh.run_cli` entrypoint) into the
# extension.
cli = ["dep:rlmesh-cli"]
# Links pyo3-stub-gen for dev-time `_rlmesh.pyi` generation.
stub-gen = ["dep:pyo3-stub-gen"]

[dependencies]
rlmesh = { workspace = true }
rlmesh-adapters = { workspace = true }
rlmesh-cli = { workspace = true, optional = true }
rlmesh-grpc = { workspace = true }
rlmesh-proto = { workspace = true }
rlmesh-sandbox = { workspace = true }
rlmesh-spaces = { workspace = true }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

image = { workspace = true, features = ["png", "jpeg"] }
pyo3 = { workspace = true, features = [
  "auto-initialize",
  "extension-module",
  "generate-import-lib",
] }
pyo3-stub-gen = { workspace = true, optional = true }
# Non-optional on purpose: a build-time-only proc-macro whose
# rustpython-parser/unicode_names2 deps are host tools that never link into the
# cdylib. Supplies `gen_stub_*` (under `stub-gen`) and the `remove_gen_stub`
# no-op shim (without it) for the inert `#[gen_stub(...)]` helper attributes.
pyo3-stub-gen-derive = { workspace = true }
rand = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true, features = ["resolve-config"] }

[lints]
workspace = true
